--- a/automated-build-react/public/css/index.css
+++ b/automated-build-react/public/css/index.css
@@ -18,7 +18,7 @@
 }
 
 .obstacle {
-  background-color: black;
+  background-color: forestgreen;
   width: 20px;
   height: 20px;
   position: absolute;
